--- a/.prettierignore
+++ b/.prettierignore
@@ -94,3 +94,14 @@ sw.*
 
 # Vim swap files
 *.swp
+
+.babelrc
+.eslintrc.js
+.gitignore
+.prettierrc
+jest.config.js
+nuxt.config.js
+package-lock.json
+package.json
+tailwind.config.js
+tsconfig.json
