--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
 	"semi": false,
-	"singleQuote": true,
+	"singleQuote": false,
 	"bracketSpacing": true,
 	"bracketSameLine": false,
 	"arrowParens": "always"
